add mobile menu and hamburger

--- a/index.html
+++ b/index.html
@@ -57,6 +57,94 @@
             </li>
           </ul>
         </address>
+        <button class="menu-icon-hamburger">
+          <svg class="icon-hamburger" width="24" height="24">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg>
+        </button>
+      </div>
+      <!--menu-hamburger-->
+      <div class="menu-hamburger is-open-hamburger">
+        <button type="button" class="button-close">
+          <svg class="button-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="list-header-hamburger">
+          <ul class="list-header ham">
+            <li>
+              <a href="./index.html" class="forst-link link ham active-link"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="" class="first-link link ham">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="first-link link ham">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div class="mobile-menu-div">
+          <ul class="address-list ham">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact-link ham"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="contact-link ham">
+                +11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          <ul class="mobile-menu ham">
+            <li class="footer-icons-li">
+              <a href="" class="mobile-link footer-link-icon" target="_blank">
+                <svg
+                  class="icon-sm sm-footer footer-icon-li"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-li">
+              <a href="" class="mobile-link footer-link-icon" target="_blank">
+                <svg
+                  class="icon-sm sm-footer footer-icon-li"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-li">
+              <a href="" class="mobile-link footer-link-icon" target="_blank">
+                <svg
+                  class="icon-sm sm-footer footer-icon-li"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-li">
+              <a href="" class="mobile-link footer-link-icon" target="_blank">
+                <svg
+                  class="icon-sm sm-footer footer-icon-li"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
