--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </li>
           </ul>
         </div>
-        <div class="mobile-menu-div">
+        <div class="address-menu-div">
           <ul class="address-list ham">
             <li>
               <a href="mailto:info@devstudio.com" class="contact-link ham"
@@ -98,9 +98,9 @@
               >
             </li>
           </ul>
-          <ul class="mobile-menu ham">
+          <ul class="social-menu ham">
             <li class="footer-icons-li">
-              <a href="" class="mobile-link footer-link-icon" target="_blank">
+              <a href="" class="social-link footer-link-icon" target="_blank">
                 <svg
                   class="icon-sm sm-footer footer-icon-li"
                   width="24"
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="footer-icons-li">
-              <a href="" class="mobile-link footer-link-icon" target="_blank">
+              <a href="" class="social-link footer-link-icon" target="_blank">
                 <svg
                   class="icon-sm sm-footer footer-icon-li"
                   width="24"
@@ -122,7 +122,7 @@
               </a>
             </li>
             <li class="footer-icons-li">
-              <a href="" class="mobile-link footer-link-icon" target="_blank">
+              <a href="" class="social-link footer-link-icon" target="_blank">
                 <svg
                   class="icon-sm sm-footer footer-icon-li"
                   width="24"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="footer-icons-li">
-              <a href="" class="mobile-link footer-link-icon" target="_blank">
+              <a href="" class="social-link footer-link-icon" target="_blank">
                 <svg
                   class="icon-sm sm-footer footer-icon-li"
                   width="24"
