--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             </li>
             <li class="section-two-li">
               <img
-                srcset=".images/camila-3.jpg 1x, .images/camila-3@2x.jpg 2x"
+                srcset="./images/camila-3.jpg 1x, ./images/camila-3@2x.jpg 2x"
                 src="./images/camila-3.jpg"
                 alt="woman in a pink sweater"
                 width="264"
@@ -352,7 +352,7 @@
             </li>
             <li class="section-two-li">
               <img
-                srcset=".images/daniel-4.jpg 1x, .images/daniel-4@2x.jpg 2x"
+                srcset="./images/daniel-4.jpg 1x, ./images/daniel-4@2x.jpg 2x"
                 src="./images/daniel-4.jpg"
                 alt="man in a grey t-shirt"
                 width="264"
