--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
-              <h3 class="heading-h">Strategy</h3>
+              <h3 class="heading-h tablet-h desktop-h">Strategy</h3>
               <p class="paragraph-one">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -181,7 +181,7 @@
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
-              <h3 class="heading-h">Punctuality</h3>
+              <h3 class="heading-h tablet-h desktop-h">Punctuality</h3>
               <p class="paragraph-one">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -193,7 +193,7 @@
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
-              <h3 class="heading-h">Diligence</h3>
+              <h3 class="heading-h tablet-h desktop-h">Diligence</h3>
               <p class="paragraph-one">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -205,7 +205,7 @@
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
-              <h3 class="heading-h">Technologies</h3>
+              <h3 class="heading-h tablet-h desktop-h">Technologies</h3>
               <p class="paragraph-one">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -661,7 +661,7 @@
     <footer class="footer">
       <div class="container footer-main">
         <div class="div-footer-one">
-          <a class="logo-link link" href="index.html"
+          <a class="logo-link link logo-bottom" href="index.html"
             >Web<span class="logo-footer">Studio</span></a
           >
           <p class="footer-paragraph">
@@ -670,7 +670,7 @@
           </p>
         </div>
         <div class="social-media-container">
-          <p class="footer-paragraph-one">Social media</p>
+          <p class="footer-paragraph-text">Social media</p>
           <ul class="footer-icons-list">
             <li class="footer-icons-li">
               <a href="" class="footer-link-icon">
@@ -703,7 +703,7 @@
           </ul>
         </div>
         <div class="div-footer-three">
-          <p class="footer-paragraph-three">Subscribe</p>
+          <p class="footer-paragraph-text">Subscribe</p>
           <form class="footer-form">
             <label class="label-footer">
               <input
