--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         </div>
       </section>
 
-      <!--section gfour-->
+      <!--section four-->
       <section class="section-three">
         <div class="container">
           <h2 class="heading-three">Our Portfolio</h2>
